Basic entry adding

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,4 +5,12 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
            version="2.5">
 
+    <servlet>
+        <servlet-name>save</servlet-name>
+        <servlet-class>com.appspot.yanotepad.servlet.Save</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>save</servlet-name>
+        <url-pattern>save</url-pattern>
+    </servlet-mapping>
 </web-app>
