Added Delete support

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,8 +9,16 @@
         <servlet-name>save</servlet-name>
         <servlet-class>com.appspot.yanotepad.servlet.Save</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>delete</servlet-name>
+        <servlet-class>com.appspot.yanotepad.servlet.Delete</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>save</servlet-name>
         <url-pattern>save</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>delete</servlet-name>
+        <url-pattern>delete</url-pattern>
     </servlet-mapping>
 </web-app>
