--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,10 +15,10 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>save</servlet-name>
-        <url-pattern>save</url-pattern>
+        <url-pattern>/save</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>delete</servlet-name>
-        <url-pattern>delete</url-pattern>
+        <url-pattern>/delete</url-pattern>
     </servlet-mapping>
 </web-app>
