--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.4</version>
 
     <groupId>com.appspot.yanotepad</groupId>
     <artifactId>yanotepad</artifactId>
